# keypulse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Package.swift  README.en.md  README.md  README.zh.md  SECURITY.md  SKILL_README.md  SUMMARY.md  TESTING.md  VISION.md  config.toml  install.sh  pyproject.toml
KeyPulse/: ActivityMonitor.swift  DatabaseManager.swift
Sources/: ActivityMonitor.swift  DatabaseManager.swift  KeystrokeCounter.swift  ProjectExtractor.swift  ReportGenerator.swift  TextDesensitizer.swift  main.swift
docs/: M6_2_sensitive_apps_research.md  cleaning-strategy.md  data-source-architecture.md  data-source-matrix.md  model-gateway-fallback.md
docs/architecture/: 2026-04-18-keypulse-architecture-decision.md  (+1 more)
integrations/obsidian/: README.md  (+1 more)
keypulse/: app.py  cli.py  config.py
scripts/: scrub_history.py  skeleton_mvp.py
tests/: test_app_triggers.py  test_atomic_io.py  test_blacklist.py  test_camera_monitor.py  test_capture_active_app.py  test_capture_aggregator.py  test_capture_ax_text.py  test_capture_fusion.py  test_capture_keyboard_chunk.py  test_capture_light_config.py  test_capture_manager_control.py  test_capture_manager_watchers.py  test_capture_ocr.py  test_capture_policy.py  test_capture_watcher_supervisor.py  test_cleaning_content_quality.py  test_cleaning_dedup.py  test_cleaning_file_whitelist.py  test_cleaning_path_filter.py  test_cleaning_regression.py  test_cli_control.py  test_cli_hud.py  test_cli_model_and_search.py  test_cli_obsidian_sync_gating.py  test_cluster_s009.py  test_healthcheck.py  test_hud_health.py  test_hud_state.py  test_hud_summary.py  test_migration_v12_semantic_weight.py  test_migration_v13_user_present.py  test_migrations.py  test_model_fallback.py  test_model_gateway.py  test_model_gateway_render.py  test_model_keychain.py  test_model_setup_cli.py  test_narrative_dual_speaker.py  test_narrative_v2.py  test_obsidian_exporter.py  (+70 more)
(+163 files in other folders)
